create UI & javascript logic

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-  <!-- Kerjakan header styling -->
+  <!-- Kerjakan header styling (Done) -->
   <header class="headBar">
     <h1 class="headBarTitle">Bookshelf App</h1>
   </header>
 
-  <!-- kerjakan konten -->
+  <!-- kerjakan konten (Done) -->
   <main>
     <section class="input_section">
       <h2>Tambah Buku Baru</h2>
@@ -46,10 +46,10 @@
         </button>
       </form>
     </section>
+    <!-- Done -->
 
-    <!-- End -->
-
-    <section>
+    <!-- Kerjakan section cari buku ( Opsional ) -->
+    <section class="search_section">
       <h2>Cari Buku (Opsional)</h2>
       <form id="searchBook" data-testid="searchBookForm">
         <label for="searchBookTitle">Judul</label>
@@ -59,49 +59,54 @@
         </button>
       </form>
     </section>
+    <!-- End -->
 
-    <section>
+    <section class="book_shelf">
       <h2>Belum selesai dibaca</h2>
 
-      <div id="incompleteBookList" data-testid="incompleteBookList">
+      <div id="incompleteBookList" data-testid="incompleteBookList" class="book_list">
         <!-- 
             Ini adalah struktur HTML untuk masing-masing buku.
             Pastikan susunan elemen beserta atribut data-testid menyesuaikan seperti contoh ini.
           -->
-        <div data-bookid="123123123" data-testid="bookItem">
-          <h3 data-testid="bookItemTitle">Judul Buku 1</h3>
+        <div data-bookid="123123123" data-testid="bookItem" class="book_item">
+          <h3 data-testid="bookItemTitle">Judul Buku </h3>
           <p data-testid="bookItemAuthor">Penulis: Penulis Buku 1</p>
           <p data-testid="bookItemYear">Tahun: 2030</p>
-          <div>
-            <button data-testid="bookItemIsCompleteButton">Selesai dibaca</button>
-            <button data-testid="bookItemDeleteButton">Hapus Buku</button>
-            <button data-testid="bookItemEditButton">Edit Buku</button>
+          <div class="action">
+            <button data-testid="bookItemIsCompleteButton" class="green">Selesai dibaca</button>
+            <button data-testid="bookItemDeleteButton" class="red">Hapus Buku</button>
+            <button data-testid="bookItemEditButton" class="yellow">Edit Buku</button>
           </div>
         </div>
       </div>
     </section>
 
-    <section>
+    <section class="book_shelf">
       <h2>Selesai dibaca</h2>
 
-      <div id="completeBookList" data-testid="completeBookList">
+      <div id="completeBookList" data-testid="completeBookList" class="book_list">
         <!-- 
             Ini adalah struktur HTML untuk masing-masing buku.
             Pastikan susunan elemen beserta atribut data-testid menyesuaikan seperti contoh ini.
           -->
-        <div data-bookid="456456456" data-testid="bookItem">
-          <h3 data-testid="bookItemTitle">Judul Buku 2</h3>
+        <div data-bookid="456456456" data-testid="bookItem" class="book_item">
+          <h3 data-testid="bookItemTitle">Judul Buku </h3>
           <p data-testid="bookItemAuthor">Penulis: Penulis Buku 2</p>
           <p data-testid="bookItemYear">Tahun: 2030</p>
-          <div>
-            <button data-testid="bookItemIsCompleteButton">Selesai dibaca</button>
-            <button data-testid="bookItemDeleteButton">Hapus Buku</button>
-            <button data-testid="bookItemEditButton">Edit Buku</button>
+          <div class="action">
+            <button data-testid="bookItemIsCompleteButton" class="green"> Belum selesai dibaca</button>
+            <button data-testid="bookItemDeleteButton" class="red">Hapus Buku</button>
+            <button data-testid="bookItemEditButton" class="yellow">Edit Buku</button>
           </div>
         </div>
       </div>
     </section>
   </main>
+
+  <footer>
+    <p>Created by Egal Assegaf.</p>
+  </footer>
 </body>
 
 </html>
