--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <input id="bookFormIsComplete" type="checkbox" data-testid="bookFormIsCompleteCheckbox" />
         </div>
         <button id="bookFormSubmit" type="submit" data-testid="bookFormSubmitButton">
-          Masukkan Buku ke rak <span>Belum selesai dibaca</span>
+          Masukkan Buku
         </button>
       </form>
     </section>
@@ -50,7 +50,7 @@
 
     <!-- Kerjakan section cari buku ( Opsional ) -->
     <section class="search_section">
-      <h2>Cari Buku (Opsional)</h2>
+      <h2>Cari Buku</h2>
       <form id="searchBook" data-testid="searchBookForm">
         <label for="searchBookTitle">Judul</label>
         <input id="searchBookTitle" type="text" data-testid="searchBookFormTitleInput" />
@@ -69,7 +69,7 @@
             Ini adalah struktur HTML untuk masing-masing buku.
             Pastikan susunan elemen beserta atribut data-testid menyesuaikan seperti contoh ini.
           -->
-        <div data-bookid="123123123" data-testid="bookItem" class="book_item">
+        <!-- <div data-bookid="123123123" data-testid="bookItem" class="book_item">
           <h3 data-testid="bookItemTitle">Judul Buku </h3>
           <p data-testid="bookItemAuthor">Penulis: Penulis Buku 1</p>
           <p data-testid="bookItemYear">Tahun: 2030</p>
@@ -78,7 +78,7 @@
             <button data-testid="bookItemDeleteButton" class="red">Hapus Buku</button>
             <button data-testid="bookItemEditButton" class="yellow">Edit Buku</button>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -90,7 +90,7 @@
             Ini adalah struktur HTML untuk masing-masing buku.
             Pastikan susunan elemen beserta atribut data-testid menyesuaikan seperti contoh ini.
           -->
-        <div data-bookid="456456456" data-testid="bookItem" class="book_item">
+        <!-- <div data-bookid="456456456" data-testid="bookItem" class="book_item">
           <h3 data-testid="bookItemTitle">Judul Buku </h3>
           <p data-testid="bookItemAuthor">Penulis: Penulis Buku 2</p>
           <p data-testid="bookItemYear">Tahun: 2030</p>
@@ -99,7 +99,7 @@
             <button data-testid="bookItemDeleteButton" class="red">Hapus Buku</button>
             <button data-testid="bookItemEditButton" class="yellow">Edit Buku</button>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
   </main>
